[package]
name = "easysync"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
strum = "0.17.1"
strum_macros = "0.17.1"
itertools = "0.8.2"
